--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,7 +28,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "node_modules/ngx-toastr/toastr.css",
+              "src/styles.scss",
+              "src/assets/scss/custom.scss"
             ],
             "scripts": []
           },
