--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --o --port 3000",
+    "start": "ng serve --port 3000 --proxy-config proxy.conf.json --o",
     "build-local": "ng build",
     "build-uat": "ng build",
-    "build-prod": "ng build",
+    "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
